# optimath

./: Cargo.toml  README.md  rustfmt.toml
benches/: simd.rs
hooks/: pre-commit
src/: advanced.rs  avx.rs  base.rs  benching.rs  consts.rs  dimensional.rs  dynvec.rs  experimental.rs  fixed.rs  insights.rs  layout.rs  lib.rs  random.rs  serialize.rs  simd.rs  sse.rs  templatemetamath.rs  types.rs  view.rs
