[package]
name = "optimath"
version = "0.0.0"
authors = ["djugei <ddjugei@gmail.com"]
edition = "2018"
description = "a no_std linear algebra library based on const generics, (later on with simd support)"
license = "Apache-2.0"
repository = "https://github.com/djugei/optimath/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_simd="0.3"
