[package]
name = "optimath"
version = "0.1.0"
authors = ["djugei <ddjugei@gmail.com"]
edition = "2018"
description = "Linear Algebra using const generics for no_std and specialization to enable SIMD."
license = "Apache-2.0"
repository = "https://github.com/djugei/optimath/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#packed_simd="0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simd"
harness = false
