[package]
name = "optimath"
version = "0.3.1"
authors = ["djugei <ddjugei@gmail.com"]
edition = "2018"
description = "Linear Algebra using const generics for no_std and specialization to enable SIMD."
license = "Apache-2.0"
repository = "https://github.com/djugei/optimath/"
categories = ["science", "mathematics", "no-std", "data-structures", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde", "rand"]
alloc = []


[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
rand = { version = "0.7", default-features = false, optional = true }


[dev-dependencies]
criterion = "0.3"
bincode = "1.2"
rand = { version = "0.7"}

[[bench]]
name = "simd"
harness = false

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[profile.release]
lto = true

[profile.dev]
opt-level = 1
